[package]
name = "web_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.13.0"
thirtyfour = "0.31.0"
tokio = "1.22.0"
diesel = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15"

